--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
     package="com.gmail.pavlovsv93.permission">
 
     <!-- Разрешение на чтение контактов -->
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
-    <!-- Разрешение для работы Content Provider -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- Разрешение для работы Content Provider -->
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
@@ -18,6 +16,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Permission">
+
+        <provider
+            android:name=".content.provider.MyContentProvider"
+            android:authorities="@string/authorities"
+            android:enabled="true"
+            android:exported="true"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
